fixed overflow error for smaller screens

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,9 @@
     user-select: none;
 }
 
+body {
+    overflow: hidden;
+}
 
 /* main div styling  */
 .container {
